--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ DB_HOST=postgres
 DB_PORT=5432
 REDIS_URL=redis://redis:6379/0
 OLLAMA_HOST=http://ollama:11434
-OLLAMA_MODEL_NAME=hf.co/bartowski/llama-3-sqlcoder-8b-GGUF:Q6_K
+OLLAMA_MODEL_NAME=llama3.2
+OLLAMA_SQL_MODEL_NAME=hf.co/bartowski/llama-3-sqlcoder-8b-GGUF:Q6_K
