--- a/.env
+++ b/.env
@@ -3,7 +3,6 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=postgres
 DB_PORT=5432
-REDIS_URL=redis://redis:6379/0
 OLLAMA_HOST=http://ollama:11434
 OLLAMA_MODEL_NAME=llama3.2
-OLLAMA_SQL_MODEL_NAME=hf.co/bartowski/llama-3-sqlcoder-8b-GGUF:Q6_K
+OLLAMA_SQL_MODEL_NAME=mannix/defog-llama3-sqlcoder-8b
